[tool.poetry]
name = "doing-without-class"
version = "0.1.0"
description = ""
authors = ["Tibs <tibs@tonyibbs.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
notebook = "^6.4.4"
rise = "^5.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
